# syuink

./: .dockerignore  .gitignore  CHANGELOG.md  CODEBUDDY.md  Cargo.toml  Dockerfile  LICENSE  MANUAL_ZH.md  README.md  RISK_REPORT.md  SERVER_DEPLOY.md  SIGNALING_API.md  TEST_PLAN.md  build_docker.ps1  docker-compose.yml  package-lock.json  package.json
.trae/documents/: p2p-remote-vpn-prd.md  p2p-remote-vpn-tech-arch.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ErrorBoundary.tsx  TitleBar.tsx
apps/desktop/src/context/: VPNContext.tsx
apps/desktop/src/pages/: Devices.tsx  Home.tsx  Login.tsx  Settings.tsx
apps/desktop/src/utils/: server.ts
apps/signal-server/: Dockerfile  package.json  schema.sql  wrangler.toml
apps/signal-server/.wrangler/tmp/bundle-4LtMGS/: middleware-insertion-facade.js  middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/bundle-9kZQTw/: middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/bundle-Ju48jU/: middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/bundle-R7RQdC/: middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/bundle-TfDoge/: middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/bundle-k2ShRh/: middleware-loader.entry.ts
apps/signal-server/.wrangler/tmp/dev-9AYnem/: index.js  index.js.map
apps/signal-server/.wrangler/tmp/dev-BlULOg/: index.js  index.js.map
apps/signal-server/.wrangler/tmp/dev-X0xsdt/: index.js  index.js.map
apps/signal-server/.wrangler/tmp/dev-j9iawM/: index.js  index.js.map
apps/signal-server/.wrangler/tmp/dev-u19Lnt/: index.js  index.js.map
apps/signal-server/.wrangler/tmp/dev-vxhBd0/: index.js  index.js.map
apps/signal-server/src/: index.ts
crates/p2p-node/: Cargo.toml
crates/p2p-node/src/: broadcast.rs  gateway.rs  lib.rs  p2p.rs  route_manager.rs  signaling.rs  socks5.rs  webrtc.rs
crates/shared-proto/: Cargo.toml
crates/shared-proto/src/: lib.rs
crates/tun-device/: Cargo.toml
crates/tun-device/src/: lib.rs
scripts/: install_server.sh
