[workspace]
members = [
    "apps/desktop/src-tauri",
    "apps/cli",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.10"
bytes = "1.5"
futures = "0.3"
tun = { version = "0.6", features = ["async"] }
socket2 = "0.5"
bincode = "1.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
