[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-proto = { path = "../shared-proto" }
tun-device = { path = "../tun-device" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
socket2.workspace = true
uuid = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] } 
# Ring is often easier to setup than opennamespaced-ssl for cross-platform
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
serde_json = { workspace = true }
base64 = "0.22.1"
etherparse = "0.19.0"
ipnetwork = "0.21.1"
smoltcp = "0.12.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"


[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
